Pending changes in the mainline
===============================

REST API
--------

* API version upgraded to 15
* Added "Level" option to POST /tools/bulk-modify
* Added missing OpenAPI documentation of "KeepSource" in ".../modify" and ".../anonymize"

Maintenance
-----------

* Added file CITATION.cff
* Linux Standard Base (LSB) builds of Orthanc can load non-LSB builds of plugins
* Fix upload of ZIP archives containing a DICOMDIR file
* Fix computation of the estimated time of arrival in jobs


Version 1.9.6 (2021-07-21)
==========================

Orthanc Explorer
----------------

* In lookup and query/retrieve, possibility to provide a specific study date
* Clicking on "Send to remote modality" displays the job information to monitor progress

Maintenance
-----------

* Fix orphaned attachments if bad revision number is provided


Version 1.9.5 (2021-07-08)
==========================

General
-------

* Anonymization is applied recursively to nested tags

REST API
--------

* API version upgraded to 14
* Added "Short", "Simplify" and/or "Full" options to control the format of DICOM tags in:
  - POST /modalities/{id}/find-worklist
  - POST /queries/{id}/answers/{index}/retrieve
  - POST /queries/{id}/retrieve

Maintenance
-----------

* Fix broken "Do lookup" button in Orthanc Explorer
* Error code and description of jobs are now saved into the Orthanc database


Version 1.9.4 (2021-06-24)
==========================

General
-------

* Orthanc now anonymizes according to Basic Profile of PS 3.15-2021b Table E.1-1
* New configuration options:
  - "ExternalDictionaries" to load external DICOM dictionaries (useful for DICONDE)
  - "SynchronousZipStream" to disable streaming of ZIP

Orthanc Explorer
----------------

* Orthanc Explorer supports the DICONDE dictionary

REST API
--------

* API version upgraded to 13
* New routes to handle groups of multiple, unrelated DICOM resources at once:
  - "/tools/bulk-anonymize" to anonymize a set of resources